fix spacing for the homepage on the footer and the date element

--- a/themes/custom/d8_materialize/sass/components/custom/_front-banner.scss
+++ b/themes/custom/d8_materialize/sass/components/custom/_front-banner.scss
@@ -40,6 +40,7 @@
 }
 .date-camp {
   text-align: center;
+  margin-bottom: 30px;
   img {
     opacity: 0;
     @media #{$small-and-down}{
